test/functions/operatorOverloads/errors/namedOperator2.chpl
record R {
  operator foo() {
    writeln("In operator foo()");
  }
}

var myR: R;

myR.foo();
